app-test/testdata/typesystem/neg/field-access-with-any-type/check/field1.check
Error in "testdata/typesystem/neg/field-access-with-any-type/src/field.cal" on line 9:
            OUT <-- t.foo; // error
                    ^^^^^
No member foo for T.